mutants.out.old/log/src__matryoshka.rs_line_117_col_5_003.log

*** src/matryoshka.rs:117:5: replace try_refine -> Result<Vec<(I, f32)>> with Ok(vec![(Default::default(), 0.0)])

*** mutation diff:
--- src/matryoshka.rs
+++ replace try_refine -> Result<Vec<(I, f32)>> with Ok(vec![(Default::default(), 0.0)])
@@ -109,49 +109,17 @@
 /// Returns [`RefineError::InvalidHeadDims`] if `head_dims >= query.len()`.
 pub fn try_refine<I: Clone + Eq + Hash>(
     candidates: &[(I, f32)],
     query: &[f32],
     docs: &[(I, Vec<f32>)],
     head_dims: usize,
     config: RefineConfig,
 ) -> Result<Vec<(I, f32)>> {
-    if head_dims >= query.len() {
-        return Err(RefineError::InvalidHeadDims {
-            head_dims,
-            query_len: query.len(),
-        });
-    }
-
-    let doc_map: HashMap<&I, &[f32]> = docs
-        .iter()
-        .filter(|(_, emb)| emb.len() > head_dims)
-        .map(|(id, emb)| (id, emb.as_slice()))
-        .collect();
-    let query_tail = &query[head_dims..];
-    let alpha = config.alpha;
-
-    let mut results: Vec<(I, f32)> = candidates
-        .iter()
-        .filter_map(|(id, orig)| {
-            let doc_emb = doc_map.get(id)?;
-            let doc_tail = &doc_emb[head_dims..];
-            let tail_sim = simd::cosine(query_tail, doc_tail);
-            let blended = (1.0 - alpha).mul_add(tail_sim, alpha * orig);
-            Some((id.clone(), blended))
-        })
-        .collect();
-
-    crate::sort_scored_desc(&mut results);
-
-    if let Some(k) = config.top_k {
-        results.truncate(k);
-    }
-
-    Ok(results)
+    Ok(vec![(Default::default(), 0.0)]) /* ~ changed by cargo-mutants ~ */
 }
 
 // ─────────────────────────────────────────────────────────────────────────────
 // Tests
 // ─────────────────────────────────────────────────────────────────────────────
 
 #[cfg(test)]
 mod tests {


*** /opt/homebrew/bin/cargo test --no-run --verbose --package=rank-refine@0.7.9
       Fresh unicode-ident v1.0.22
       Fresh cfg-if v1.0.4
       Fresh autocfg v1.5.0
       Fresh either v1.15.0
       Fresh regex-syntax v0.8.8
       Fresh bitflags v2.10.0
       Fresh proc-macro2 v1.0.103
       Fresh once_cell v1.21.3
       Fresh ryu v1.0.20
       Fresh fastrand v2.3.0
       Fresh ciborium-io v0.2.2
       Fresh quote v1.0.42
       Fresh libc v0.2.177
       Fresh crossbeam-utils v0.8.21
       Fresh serde_core v1.0.228
       Fresh clap_lex v0.7.6
       Fresh anstyle v1.0.13
       Fresh plotters-backend v0.3.7
       Fresh itoa v1.0.15
       Fresh memchr v2.7.6
       Fresh regex-automata v0.4.13
       Fresh itertools v0.10.5
       Fresh fnv v1.0.7
       Fresh quick-error v1.2.3
       Fresh syn v2.0.111
       Fresh getrandom v0.3.4
       Fresh errno v0.3.14
       Fresh crossbeam-epoch v0.9.18
       Fresh num-traits v0.2.19
       Fresh serde_json v1.0.145
       Fresh wait-timeout v0.2.1
       Fresh plotters-svg v0.3.7
       Fresh clap_builder v4.5.53
       Fresh cast v0.3.0
       Fresh bit-vec v0.8.0
       Fresh same-file v1.0.6
       Fresh regex v1.12.2
       Fresh is-terminal v0.4.17
       Fresh anes v0.1.6
       Fresh zerocopy-derive v0.8.30
       Fresh serde_derive v1.0.228
       Fresh rand_core v0.9.3
       Fresh rustix v1.1.2
       Fresh crossbeam-deque v0.8.6
       Fresh plotters v0.3.7
       Fresh criterion-plot v0.5.0
       Fresh bit-set v0.8.0
       Fresh walkdir v2.5.0
       Fresh clap v4.5.53
       Fresh oorandom v11.1.5
       Fresh unarray v0.1.4
       Dirty rank-refine v0.7.9 (/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp): the file `src/colbert.rs` has changed (1764195673.932583398s, 1s after last build at 1764195672.536382695s)
   Compiling rank-refine v0.7.9 (/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp)
       Fresh zerocopy v0.8.30
       Fresh serde v1.0.228
       Fresh rayon-core v1.13.0
       Fresh tempfile v3.23.0
       Fresh rand v0.9.2
       Fresh rand_xorshift v0.4.0
       Fresh half v2.7.1
       Fresh ppv-lite86 v0.2.21
       Fresh rayon v1.11.0
       Fresh tinytemplate v1.2.1
       Fresh rusty-fork v0.3.1
       Fresh ciborium-ll v0.2.2
       Fresh rand_chacha v0.9.0
       Fresh ciborium v0.2.2
       Fresh proptest v1.9.0
       Fresh criterion v0.5.1
     Running `rustc --crate-name rank_refine --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("default", "hierarchical", "kodama"))' -C metadata=d60e10c1e4de765d -C extra-filename=-66be09a2c0c6ed5c --out-dir /private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/deps -C incremental=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/incremental -L dependency=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/deps --extern criterion=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/deps/libcriterion-a8d57b2e80b47536.rlib --extern proptest=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/deps/libproptest-0cbeba200425c4c9.rlib`
     Running `rustc --crate-name rank_refine --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("default", "hierarchical", "kodama"))' -C metadata=a9145a0b8e512428 -C extra-filename=-a97128c91e1742ac --out-dir /private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/deps -C incremental=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/incremental -L dependency=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/deps`
warning: unused imports: `RefineError` and `simd`
  --> src/matryoshka.rs:25:13
   |
25 | use crate::{simd, RefineConfig, RefineError, Result};
   |             ^^^^                ^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::collections::HashMap`
  --> src/matryoshka.rs:26:5
   |
26 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `I: Default` is not satisfied
   --> src/matryoshka.rs:117:14
    |
117 |     Ok(vec![(Default::default(), 0.0)]) /* ~ changed by cargo-mutants ~ */
    |              ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `I`
    |
help: consider further restricting type parameter `I` with trait `Default`
    |
110 | pub fn try_refine<I: Clone + Eq + Hash + std::default::Default>(
    |                                        +++++++++++++++++++++++

For more information about this error, try `rustc --explain E0277`.
warning: `rank-refine` (lib) generated 2 warnings
error: could not compile `rank-refine` (lib) due to 1 previous error; 2 warnings emitted

Caused by:
  process didn't exit successfully: `rustc --crate-name rank_refine --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("default", "hierarchical", "kodama"))' -C metadata=a9145a0b8e512428 -C extra-filename=-a97128c91e1742ac --out-dir /private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/deps -C incremental=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/incremental -L dependency=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
warning: unused import: `simd`
  --> src/matryoshka.rs:25:13
   |
25 | use crate::{simd, RefineConfig, RefineError, Result};
   |             ^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `rank-refine` (lib test) generated 2 warnings (1 duplicate)
error: could not compile `rank-refine` (lib test) due to 1 previous error; 2 warnings emitted

Caused by:
  process didn't exit successfully: `rustc --crate-name rank_refine --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --cfg 'feature="default"' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values("default", "hierarchical", "kodama"))' -C metadata=d60e10c1e4de765d -C extra-filename=-66be09a2c0c6ed5c --out-dir /private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/deps -C incremental=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/incremental -L dependency=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/deps --extern criterion=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/deps/libcriterion-a8d57b2e80b47536.rlib --extern proptest=/private/var/folders/dt/jq9nqy8x2wd65h22qb9rptjr0000gn/T/cargo-mutants-rank-refine-DHUa65.tmp/target/debug/deps/libproptest-0cbeba200425c4c9.rlib` (exit status: 1)

*** result: Failure(101)
